# e2e.api

./: .flake8  .gitignore  .isort.cfg  .pylintrc  .style.yapf  CHANGELOG.rst  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.rst  TODO.md  mypy.ini  setup.cfg  setup.py  tox.ini
e2e/api/: __init__.py  api.py  base.py  decorators.py  endpoint.py  exceptions.py  types.py
tests/api/: test_magic_methods.py  test_persistent_kwargs.py
